
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-03-27 DP  1.6.4  Allow editting of rows with a blank string in the primary
                      key in the edit grid, per Jeremy Palmer.
2007-03-16 DP  1.6.3  Fix an overflow bug in pgAgent, per report from Sabin
                      Coanda
2007-03-14 DP  1.8.0  Function/procedure signatures do not include OUT params.
                      Fix this oversight, and cleanup much of the related code.
2007-03-12 DP  1.8.0  Remove a lot debugging code of little or no use.
2007-03-12 DP  1.8.0  Position the cursor at the error position when an error
                      occurs in the Query Tool. Ensure the line is visible.
2007-03-12 DP  1.8.0  Use Oracle style syntax for edbspl triggers.
2007-03-12 DP  1.8.0  Show only tables & views (as 'catalog objects') in
                      pseudo-system catalogs such as information_schema and
                      EDB's sys and dbo catalogs. Lock down functionality to
                      prevent create/edit/drop options being offered.
2007-03-09 DP  1.8.0  Create and reverse engineer edbspl procedures using
                      Oracle compatible syntax.
2007-03-09 DP  1.8.0  Treat all functions & procedures as 'Functions' in
                      PostgreSQL, and class only EnterpriseDB edbspl functions
                      returning void as 'Procedures'.
2007-03-08 DP  1.8.0  Preserve column widths between queries.
2007-03-08 DP  1.8.0  Use EnterpriseDB's utilities for dump and restore EDB
                      databases to ensure non-PG extensions can be handled.
2007-03-07 DP  1.8.0  Speed up loading of functions and procedures by rewriting
                      some horribly inefficient code.