@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-03-27 DP  1.8.0  Handle resetting of sequence values more consistently,
+                      per Erwin.
 2007-03-27 DP  1.6.4  Allow editting of rows with a blank string in the primary
                       key in the edit grid, per Jeremy Palmer.
 2007-03-16 DP  1.6.3  Fix an overflow bug in pgAgent, per report from Sabin
